--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ svg * {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100dvh;
   padding-block: 16px;
 }
 
