--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ svg * {
 .main {
   background-image: var(--bg-url);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: cover;
 }
 
